--- a/src/Experience/experience.css
+++ b/src/Experience/experience.css
@@ -5,8 +5,9 @@ body, h1, h2, p, blockquote, footer, header, nav, ul, li {
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Box shadow */
+    margin: 0; /* Reset default body margin */
+    padding: 0; /* Reset default body padding */
 }
 
 header {
@@ -15,59 +16,17 @@ header {
     padding: 10px 0;
 }
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-.card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-#landing img {
-    max-width: 100%;
-    margin: 20px auto;
-    display: block;
-    border-radius: 8px;
-}
-
-h2 {
-    color: #333;
-    font-size: 28px;
-    margin-top: 20px;
-}
-
-p {
-    color: #666;
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 15px;
-}
-
-blockquote {
-    margin-top: 20px;
-    padding-left: 20px;
-    border-left: 3px solid #333;
-}
-
-blockquote p {
-    font-style: italic;
-}
-
-blockquote footer {
-    margin-top: 10px;
-}
-
 footer {
     background-color: #ff0066;
     color: #fff;
     text-align: center;
     padding: 20px 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .navbar {
@@ -97,4 +56,25 @@ footer {
 
 .nav-menu a:hover {
     color: #ffd700;
+}
+
+.experience-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.experience-item img {
+    width: 100px; /* Fixed width for all images */
+    height: auto; /* Maintain aspect ratio */
+    margin-right: 20px;
+    border-radius: 8px;
+}
+
+.experience-details h3 {
+    margin-bottom: 5px;
+}
+
+.experience-details p {
+    margin-bottom: 10px;
 }
